<?xml version="1.0" encoding="UTF-8" ?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
  <modelVersion>4.0.0</modelVersion>
  <groupId>xyz.paradoxv5</groupId>
  <artifactId>sevenbag</artifactId>
  <name>SevenBag</name>
  <version>2.0-SNAPSHOT</version>
  
  <developers><developer>
    <id>ParadoxV5</id>
    <url>https://github.com/ParadoxV5</url>
  </developer></developers>
  <licenses><license>
    <name>BSL-1.0</name>
    <comments>Boost Software License 1.0</comments>
    <url>https://www.boost.org/users/license.html</url>
  </license></licenses>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
      </plugin>
    </plugins>
  </build>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>[23.0,23.1)</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>[5.9,5.10)</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <scm>
    <url>https://github.com/ParadoxV5/Java-SevenBag</url>
    <developerConnection>scm:git:https://github.com/ParadoxV5/Java-SevenBag</developerConnection>
  </scm>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/ParadoxV5/Java-SevenBag/issues</url>
  </issueManagement>
  
</project>
